update db scripts; add empty list placeholders

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "init_db": "node ./scripts/init_db",
+    "populate_db": "node ./scripts/populate_db"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
